# lab_back

./: Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml
sql/: init.sql
src/: mock.py  repository.py
src/clients/: redis.py
src/models/: __init__.py  placement.py  warehouse.py
src/repositories/: base.py
